# libngkh

./: .gitignore  CMakeLists.txt  README.md
include/ngkh/: print_progress.hpp  subproc.h  subproc.hpp
print_progress/: print_progress.hpp
subproc/: subproc.c  subproc.cpp  subproc.h  subproc.hpp  subproc_local.h
